Add test files for debugging and simplify Cloudflare worker

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <h1>Route Visualization</h1>
   
   <div class="info-box">
-    <p>This application uses a local Express server to securely handle API requests, protecting API keys from exposure in client-side code.</p>
+    <p>This application uses Cloudflare Workers to securely handle API requests, protecting API keys from exposure in client-side code.</p>
   </div>
   
   <div class="input-container">
